<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="settings_title">Settings</string>
    <string name="settings_back">Back</string>
    <string name="settings_productivity">Productivity</string>
    <string name="settings_productivity_summary">At a glance, apps, and folders</string>
    <string name="settings_themes">Themes</string>
    <string name="settings_themes_summary">Colors, appearance, and personalization</string>
    <string name="settings_advanced">Advanced</string>
    <string name="settings_advanced_summary">More options for your launcher</string>
...
